--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -45,7 +45,7 @@ stages:
     # Target Directory: $(Build.ArtifactStagingDirectory)
     - task: CopyFiles@2
       inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)/kube-manifests'
+        SourceFolder: '$(System.DefaultWorkingDirectory)/manifests'
         Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
     - bash: echo After copying to Build Artifact Directory; ls -R $(Build.ArtifactStagingDirectory)
